<resources>
    <string name="app_name">Lawyer Diary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_calender_view">CalenderViewActivity</string>
    <string name="title_activity_cases">CasesActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="client_name">Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="login">Login In</string>
    <string name="str_new_client">New Client</string>
    <string name="new_client_added">New Client Added successfully</string>
    <string name="new_client_not_added">Client is not added</string>
    <string name="str_error_name_reqired">Please Enter the name</string>
    <string name="str_err_ph_no">Please enter the phone number</string>
    <string name="str_err_ph_no_not_valid">Please enter the valid phone number</string>
    <string name="str_err_email_not_valid">Please enter valid email Id</string>
    <string name="str_ph_no_is_present">This Phone number is already present</string>

    <!-- AdMob Advertise banner id  -->
    <string name="banner_home_footer">ca-app-pub-1303442515313304/8865131277</string>
    <string name="intestitial_banner_home_footer">ca-app-pub-1303442515313304/4991504878</string>

    <string name="case_name">Case Name</string>
    <string name="str_opposition_name">Against</string>
    <string name="str_description">Description</string>
    <string name="str_status">Status</string>
    <string name="key_points">Key Points</string>
    <string name="cancel">Cancel</string>
    <string name="str_save">Save</string>
    <string name="str_court_location">Court Location</string>
    <string name="add_new_case_title">New Case</string>
    <string name="str_err_case_name_required">Please enter the case name</string>
    <string name="str_error_client_name_reqired">Please enter the client name</string>
    <string name="str_error_opposition_name_reqired">Please enter opposition name</string>
    <string name="str_error_court_location_reqired">Please enter court location</string>
    <string name="str_error_add_client_in_list">Please add the client in your client list</string>
    <string name="new_case_added">New case is added</string>
    <string name="new_case_not_added">Case is not added</string>
    <string name="str_cases_title">Cases</string>
    <string name="str_no_case_desc_found">No case description</string>
    <string name="str_case_details">Case Details</string>
    <string name="case_date">Date</string>
    <string name="str_client_files">Case Files</string>
    <string name="str_case_document_or_proofs">Documents Or Proofs</string>
    <string name="str_edit">Edit</string>
    <string name="str_remind_me">Remind Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_clients">Clients</string>

    <!-- New Event -->
    <string name="str_reminder_name">Please enter reminder name</string>
    <string name="str_location">Please enter location</string>
    <string name="str_note">Please enter note</string>
    <string name="str_click_to_time">Click here to add time</string>
    <string name="str_new_event_added">New event is added</string>
    <string name="str_err_date">Please enter date</string>
    <string name="str_err_time">Please enter time</string>
    <string name="str_not_defined_location">Location is not given</string>
    <string name="str_not_defined_note">Note is not given</string>
    <string name="str_email_validation">Please enter email id</string>
    <string name="str_email_pattern_validation">Invalid email id</string>
    <string name="str_pwd_validation">Please enter password</string>
    <string name="str_conf_pwd_validation">Please reenter your password</string>
    <string name="str_conf_pwd">Password did not match</string>
    <string name="str_user_name_val">Please enter user name</string>
    <string name="str_register_validation">Please register first,it seems user is not register</string>
    <string name="str_user_already">User may be already register</string>
    <string name="str_user_something_went">User cannot register.Some thing went wrong</string>
    <string name="str_user_register_successfully">User Register Successfully</string>
    <string name="str_regiseter">Register</string>
    <string name="str_remove_ads">Remove Ads</string>
    <string name="str_purchase_msg">IF YOU ARE TIRED OF SEEING ADS YOU CAN UPGRADE
        WITH JUST \u20B9 50 AND YOU WILL NEVER HAVE TO SEE ANOTHER AD AGAIN</string>
    <string name="str_feedback">Your feedback</string>
    <string name="str_feedback_title">Feedback</string>
    <string name="str_name">Name</string>
    <string name="str_country">Country</string>
    <string name="str_feedback_txt_view">Feedback</string>
    <string name="str_user_feedback_val">Please enter your feedback</string>
    <string name="str_select_country">Please select your country name</string>
</resources>
