<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context="com.vibeosys.lawyerdiary.activities.LoginActivity">

            <LinearLayout
                android:id="@+id/lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|top"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:background="@drawable/login_back_lawyer"
                    android:gravity="bottom|center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="17dp"
                        android:layout_marginTop="50dp"
                        android:text="LOGIN"
                        android:textColor="@android:color/white"
                        android:textSize="40sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/gray" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/gray" />

                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="@style/button_custom_new"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_custom"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/newUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="New User? Register Here"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16dp" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>


</LinearLayout>